[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "callrecord-forensic"
version = "0.1.0"
description = "A forensic utility for parsing and analyzing call record logs."
readme = "README.md"
requires-python = ">=3.9"
authors = [
  { name = "Call Record Forensic" }
]
dependencies = [
  "pytest>=8.0"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
